Added basic div structure

--- a/index.html
+++ b/index.html
@@ -4,9 +4,40 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="./resources/css/reset.css" type="text/css">
     <link rel="stylesheet" href="./resources/css/style.css" type="text/css">
-    <title></title>
+    <title>Secret Agent Supply Inc.</title>
   </head>
   <body>
 
+<!--Logo-->
+    <header>
+    </header>
+
+    <div class="Content">
+<!--Banner-->
+      <div class="banner">
+
+      </div>
+
+<!--Navigation-->
+      <div class="navigation">
+
+      </div>
+
+<!--Product Grid-->
+      <div class="product">
+
+      </div>
+<!--Locations-->
+      <div class="locations">
+
+      </div>
+<!--Hours-->
+      <div class="hours">
+
+      </div>
+    </div>
+
+<!--Footer-->
+    <footer></footer>
   </body>
 </html>
