--- a/index.html
+++ b/index.html
@@ -8,36 +8,65 @@
   </head>
   <body>
 
-<!--Logo-->
+<!--Header-->
     <header>
+      <div class="logo">
+          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/logo.png" alt="">
+      </div>
+      <span>SECRET AGENT SUPPLY INC.</span>
     </header>
 
     <div class="Content">
 <!--Banner-->
       <div class="banner">
-
+        <span>NEW ARRIVAL <br>SPORT BIKES AND MOTORCYCLES</span>
       </div>
 
 <!--Navigation-->
       <div class="navigation">
+        <nav>
+          <span>Eyewear</span>
+          <span>Apparel</span>
+          <span>Gadgets</span>
+          <span>Vehicles</span>
+          <span>Classes</span>
+          <span>Contact</span>
+        </nav>
 
       </div>
 
 <!--Product Grid-->
-      <div class="product">
+      <div class="Grid">
+        <div class="product">
+          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/pen.png" alt="">
+          <h3>Exploding Pen</h3>
+        </div>
 
+        <div class="product">
+          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/watch.png" alt="">
+          <h3>Cellular Watch</h3>
+        </div>
+
+        <div class="product">
+          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/glasses.png" alt="">
+          <h3>Thermal Glasses</h3>
+        </div>
       </div>
+
 <!--Locations-->
       <div class="locations">
-
+        <h3>Locations</h3>
+        <h4>-47.346436, 84.32354</h4>
       </div>
+
 <!--Hours-->
       <div class="hours">
-
+        <h3>Hours</h3>
+        <h4>0800-1800</h4>
       </div>
     </div>
 
 <!--Footer-->
-    <footer></footer>
+    <footer>Copyright Secret Agent Supply Inc.</footer>
   </body>
 </html>
