--- a/index.html
+++ b/index.html
@@ -10,32 +10,46 @@
 
 <!--Header-->
     <header>
-      <div class="logo">
+      <div class="container">
+        <div class="logo">
           <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/logo.png" alt="">
+          <span>SECRET AGENT SUPPLY INC.</span>
+        </div>
+
       </div>
-      <span>SECRET AGENT SUPPLY INC.</span>
     </header>
 
-    <div class="Content">
+    <div class="content">
 <!--Banner-->
       <div class="banner">
-        <span>NEW ARRIVAL <br>SPORT BIKES AND MOTORCYCLES</span>
+        <div class="container">
+          <div class="arrival">
+            <h2>NEW ARRIVAL</h2>
+            <h3>SPORT BIKES AND MOTORCYCLES</h3>
+          </div>
+        </div>
       </div>
 
 <!--Navigation-->
       <div class="navigation">
-        <nav>
-          <span>Eyewear</span>
-          <span>Apparel</span>
-          <span>Gadgets</span>
-          <span>Vehicles</span>
-          <span>Classes</span>
-          <span>Contact</span>
-        </nav>
-
+        <div class="container">
+          <nav>
+            <ul>
+              <li>Eyewear</li>
+              <li>Apparel</li>
+              <li>Gadgets</li>
+              <li>Vehicles</li>
+              <li>Classes</li>
+              <li>Contact</li>
+          </ul>
+          </nav>
+        </div>
       </div>
 
 <!--Product Grid-->
+<div class="container">
+
+
       <div class="Grid">
         <div class="product">
           <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/pen.png" alt="">
@@ -52,21 +66,29 @@
           <h3>Thermal Glasses</h3>
         </div>
       </div>
-
+</div>
 <!--Locations-->
-      <div class="locations">
-        <h3>Locations</h3>
-        <h4>-47.346436, 84.32354</h4>
-      </div>
+  <div class="container">
+    <div class="binfo">
+        <div class="info">
+            <span class="title">Locations</span>
+            <span>-47.346436, 84.32354</span>
+          </div>
 
 <!--Hours-->
-      <div class="hours">
-        <h3>Hours</h3>
-        <h4>0800-1800</h4>
+          <div class="info">
+            <span class="title">Hours</span>
+            <span>0800-1800</span>
+          </div>
+        </div>
       </div>
-    </div>
 
 <!--Footer-->
-    <footer>Copyright Secret Agent Supply Inc.</footer>
+    <footer>
+      <div class="container">
+
+        Copyright Secret Agent Supply Inc.
+      </div>
+    </footer>
   </body>
 </html>
